--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Upload lambda artifacts to S3
         run: |
-          aws s3 sync artifacts/"$SHA" s3://$S3_BUCKET/"$SHA"
+          aws s3 sync artifacts/"$SHA" s3://$S3_BUCKET/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
