Changed the secrets getter for another function
Fixed the lambda layer workflow to trigger on any change from the
submodules.
Changed function to get needed values to perform operations in the
database (this is an AWS free tier approach).

--- a/.github/workflows/build_layer.yml
+++ b/.github/workflows/build_layer.yml
@@ -5,15 +5,10 @@ on:
   push:
     branches:
       - feat-pulumi-lambdas
-      - feat-submodules-layer
     paths:
-      - "entities/**/*.py"
-      - "persistence/**/*.py"
-      - "load_secrets/**/*.py"
-  pull_request:
-    branches:
-      - feat-pulumi-lambdas
-      - feat-submodules-layer
+      - "entities/**"
+      - "persistence/**"
+      - "load_secrets/**"
 
 jobs:
   build:
