--- a/.github/workflows/deploy_lambdas.yml
+++ b/.github/workflows/deploy_lambdas.yml
@@ -35,6 +35,9 @@ jobs:
 
       - name: Install deps
         run: |
+          python -m venv .venv
+          source .venv/bin/activate
+          python -m pip install --upgrade pip
           python -m pip install -r infra/requirements.txt
 
       - id: pulumi
@@ -47,9 +50,12 @@ jobs:
           command: up
           stack-name: dev
           work-dir: ./infra/
+          diff: true
 
       - name: Pulumi outputs
         run: |
           echo "Lambdas:"
-          echo "${{ steps.pulumi.outputs.lambdas }}"
+          echo "${{ steps.pulumi.outputs.lambdas}}"
+          echo "${{ steps.pulumi.outputs.layer}}"
+          echo "${{ steps.pulumi.outputs.role}}"
 
