--- a/.github/workflows/build_layer.yml
+++ b/.github/workflows/build_layer.yml
@@ -42,7 +42,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           python -m pip install --upgrade pip
-          python -m pip install -r layer-requirements.txt
+          python -m pip install -r requirements.txt
           python -m pip install entities/dist/*.tar.gz
           python -m pip install persistence/dist/*.tar.gz
           python -m pip install load_secrets/dist/*.tar.gz
