--- a/.github/workflows/build_layer.yml
+++ b/.github/workflows/build_layer.yml
@@ -66,7 +66,52 @@ jobs:
           aws s3 mb s3://${{ secrets.S3_BUCKET }} --region ${{ secrets.AWS_REGION }} && \
           aws s3api put-bucket-versioning --bucket ${{ secrets.S3_BUCKET }} --versioning-configuration Status=Enabled
 
-      - name: Upload lambda layer to S3
+      - id: check_object_version
         run: |
-          aws s3 sync ./ s3://${{ secrets.S3_BUCKET }} --exclude "*" --include "python.zip" --content-type "application/zip" --size-only
+          latest_version=$(aws s3api list-object-versions --bucket ${{ secrets.S3_BUCKET }} --prefix python.zip --query 'Versions[0].VersionId' --output text 2>/dev/null)
+          echo "S3_OBJECT_V=$latest_version" >> "$GITHUB_OUTPUTS"
+
+      - id: create_if_not_exists
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V }} == 'None'
+        run: |
+          echo "Destination object does not exist. Uploading new version..."
+          aws s3api put-object --bucket ${{ secrets.S3_BUCKET }} --key python.zip --body python.zip
+          exit 0
+
+      - id: get_obj_sum
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V }} != 'None'
+        run: |
+          temp_file=$(mktemp)
+
+          aws s3api get-object \
+            --bucket ${{ secrets.S3_BUCKET }} \
+            --key python.zip \
+            --version-id ${{ steps.check_object_version.outputs.S3_OBJECT_V }} \
+            "$temp_file"
+
+          destination_md5=$(md5sum "$temp_file" | awk '{ print $1 }')
+          rm "$temp_file"
+          echo "REMOTE_OBJ=$destination_md5" >> "$GITHUB_OUTPUTS"
+
+      - id: compare_objects
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V }} != 'None'
+        run: |
+          source_md5=$(md5sum python.zip | awk '{ print $1 }')
+          destination_md5=${{ steps.get_obj_sum.outputs.REMOTE_OBJ }}
+
+          echo "new_layer_md5: $source_md5"
+          echo "remote_layer_md5: $destination_md5"
+
+          [ "$source_md5" == "$destination_md5" ]; echo "CHANGED_OBJ=$?" >> "$GITHUB_OUTPUTS"
+
+      - id: upload
+        if: ${{ steps.compare_objects.outputs.CHANGED_OBJ }} == 1
+        run: |
+          aws s3api put-object --bucket ${{ secrets.S3_BUCKET }} --key python.zip --body python.zip
+
+      - id: no_changes
+        if: ${{ steps.compare_objects.outputs.CHANGED_OBJ }} == 0
+        run: |
+          echo 'No changes in layer'
+          exit 0
 
