--- a/.github/workflows/build_layer.yml
+++ b/.github/workflows/build_layer.yml
@@ -71,8 +71,7 @@ jobs:
         run: |
           bucket=${{ secrets.S3_BUCKET }}
           latest_version=$(aws s3api list-object-versions --bucket "$bucket" --prefix 'python.zip' --query 'Versions[0].VersionId')
-          echo "$latest_version"
-          echo "S3_OBJECT_V=$latest_version" >> "$GITHUB_OUTPUTS"
+          echo "S3_OBJECT_V=$latest_version" >> "$GITHUB_OUTPUT"
 
       - id: create_if_not_exists
         name: Upload layer if nothing exists
@@ -99,7 +98,7 @@ jobs:
 
           destination_md5=$(md5sum "$temp_file" | awk '{ print $1 }')
           rm "$temp_file"
-          echo "REMOTE_OBJ=$destination_md5" >> "$GITHUB_OUTPUTS"
+          echo "REMOTE_OBJ=$destination_md5" >> "$GITHUB_OUTPUT"
 
       - id: compare_objects
         name: Compare local and remote md5sums
@@ -111,7 +110,7 @@ jobs:
           echo "new_layer_md5: $source_md5"
           echo "remote_layer_md5: $destination_md5"
 
-          [ "$source_md5" == "$destination_md5" ]; echo "CHANGED_OBJ=$?" >> "$GITHUB_OUTPUTS"
+          [ "$source_md5" == "$destination_md5" ]; echo "CHANGED_OBJ=$?" >> "$GITHUB_OUTPUT"
 
       - id: upload
         name: Upload layer to bucket
