--- a/.github/workflows/build_layer.yml
+++ b/.github/workflows/build_layer.yml
@@ -74,7 +74,7 @@ jobs:
 
       - id: create_if_not_exists
         name: Upload layer if nothing exists
-        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V == 'None' }}
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V == null }}
         run: |
           bucket=${{ secrets.S3_BUCKET }}
           echo "Destination object does not exist. Uploading new version..."
@@ -83,7 +83,7 @@ jobs:
 
       - id: get_obj_sum
         name: Get md5sum from dest bucket
-        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != 'None' }}
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != null }}
         run: |
           bucket=${{ secrets.S3_BUCKET }}
           version_id=${{ steps.check_object_version.outputs.S3_OBJECT_V }}
@@ -103,7 +103,7 @@ jobs:
 
       - id: compare_objects
         name: Compare local and remote md5sums
-        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != 'None' }}
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != null }}
         run: |
           source_md5=$(md5sum python.zip | awk '{ print $1 }')
           destination_md5=${{ steps.get_obj_sum.outputs.REMOTE_OBJ }}
