--- a/.github/workflows/build_layer.yml
+++ b/.github/workflows/build_layer.yml
@@ -69,12 +69,12 @@ jobs:
         run: |
           bucket=${{ secrets.S3_BUCKET }}
           latest_version=$(aws s3api list-object-versions --bucket "$bucket" --prefix 'python.zip' --query 'Versions[0].VersionId' 2>/dev/null)
-          echo "$latest_version"
+          echo "Version: $latest_version"
           echo "S3_OBJECT_V=$latest_version" >> "$GITHUB_OUTPUT"
 
       - id: create_if_not_exists
         name: Upload layer if nothing exists
-        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V == null }}
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V == '' }}
         run: |
           bucket=${{ secrets.S3_BUCKET }}
           echo "Destination object does not exist. Uploading new version..."
@@ -83,7 +83,7 @@ jobs:
 
       - id: get_obj_sum
         name: Get md5sum from dest bucket
-        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != null }}
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != '' }}
         run: |
           bucket=${{ secrets.S3_BUCKET }}
           version_id=${{ steps.check_object_version.outputs.S3_OBJECT_V }}
@@ -103,7 +103,7 @@ jobs:
 
       - id: compare_objects
         name: Compare local and remote md5sums
-        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != null }}
+        if: ${{ steps.check_object_version.outputs.S3_OBJECT_V != '' }}
         run: |
           source_md5=$(md5sum python.zip | awk '{ print $1 }')
           destination_md5=${{ steps.get_obj_sum.outputs.REMOTE_OBJ }}
