Implemented another way to remove pycache dirs

--- a/.github/workflows/build_layer.yml
+++ b/.github/workflows/build_layer.yml
@@ -30,7 +30,8 @@ jobs:
           cp -r .venv/lib/python3.12/site-packages python
           echo "Layer structure:"
           ls -h python
-          rm -rf python/pip* python/**/__pycache__
+          rm -rf python/pip*
+          find ./python -type d -name '__pycache__' -exec rm -rf {} +
           zip -r python.zip python >/dev/null
 
       - name: Setup aws
