Fixed workflow not displaying pulumi outputs

--- a/.github/workflows/deploy_lambdas.yml
+++ b/.github/workflows/deploy_lambdas.yml
@@ -80,6 +80,7 @@ jobs:
         run: |
           echo "lambdas: ${{ steps.pulumi.outputs.lambdas}}"
           echo "lambda_arns: ${{ steps.pulumi.outputs.lambda_arns}}"
+          echo "methods: ${{ steps.pulumi.outputs.methods}}"
           echo "lambda layer: ${{ steps.pulumi.outputs.layer}}"
           echo "lambdas role: ${{ steps.pulumi.outputs.role}}"
 
